# llama_server

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_mac.txt  requirements_windows.txt  serve_llama.py  serve_llm.py  service.py  setup.py  setup_llama.py  test_llama_local.py  test_llama_remote.py
tests/: test_llm_local.py  test_llm_remote.py
